Refactor install_linux.sh for improved functionality
Refactor install script for Burp Suite Professional to improve structure and add new features.