@@ -1,510 +1,345 @@
-#!/usr/bin/env bash
-
-# Burp Suite Desktop - Kali/Debian installer
-# Instala el JAR oficial de PortSwigger.
-#
-# NO ejecutar con:
-#   sudo bash script.sh
-#
-# Ejecutar como usuario normal:
-#   chmod +x install_burp.sh
-#   ./install_burp.sh
-#
-# El script utiliza sudo únicamente cuando lo necesita.
+#!/bin/bash
+# Burp Suite Professional - Centralized Menu
 
 set -Eeuo pipefail
 
-# ---------------------------------------------------------------------------
-# Configuration
-# ---------------------------------------------------------------------------
+# 1. Absolute Path Resolution
+BASE_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
+LOADER_JAR="loader.jar"
 
-BURP_URL="https://portswigger.net/burp/releases/download?product=pro&type=Jar"
+# The CDN workaround
+BURP_URL="https://portswigger-cdn.net/burp/releases/download?product=pro&type=Jar"
 
-INSTALL_DIR="${HOME}/.local/share/burpsuite"
-BURP_JAR="${INSTALL_DIR}/burpsuite.jar"
+# Centralized JVM Arguments
+JVM_ARGS=(
+    "--add-opens=java.desktop/javax.swing=ALL-UNNAMED"
+    "--add-opens=java.base/java.lang=ALL-UNNAMED"
+    "--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED"
+    "--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED"
+    "--add-opens=java.base/jdk.internal.org.objectweb.asm.Opcodes=ALL-UNNAMED"
+    "-javaagent:${BASE_DIR}/${LOADER_JAR}"
+    "-noverify"
+)
 
-BIN_DIR="${HOME}/.local/bin"
-LAUNCHER="${BIN_DIR}/burpsuitepro"
-
-DESKTOP_DIR="${HOME}/.local/share/applications"
-DESKTOP_FILE="${DESKTOP_DIR}/burpsuite-professional.desktop"
-
-MIN_JAVA=21
-
-# ---------------------------------------------------------------------------
-# Colors / logging
-# ---------------------------------------------------------------------------
-
-if [[ -t 1 ]]; then
-    BLUE=$'\033[1;34m'
-    GREEN=$'\033[1;32m'
-    YELLOW=$'\033[1;33m'
-    RED=$'\033[1;31m'
-    RESET=$'\033[0m'
-else
-    BLUE=""
-    GREEN=""
-    YELLOW=""
-    RED=""
-    RESET=""
-fi
-
-log() {
-    printf '%s[*]%s %s\n' "$BLUE" "$RESET" "$*"
-}
-
-ok() {
-    printf '%s[+]%s %s\n' "$GREEN" "$RESET" "$*"
-}
-
-warn() {
-    printf '%s[!]%s %s\n' "$YELLOW" "$RESET" "$*" >&2
-}
-
-die() {
-    printf '%s[x]%s %s\n' "$RED" "$RESET" "$*" >&2
-    exit 1
-}
-
-# ---------------------------------------------------------------------------
-# Error handler
-# ---------------------------------------------------------------------------
-
-trap 'printf "%s[x]%s Error en linea %s: %s\n" \
-    "$RED" "$RESET" "$LINENO" "$BASH_COMMAND" >&2' ERR
-
-# ---------------------------------------------------------------------------
-# Sanity checks
-# ---------------------------------------------------------------------------
-
-if (( EUID == 0 )); then
-    cat >&2 <<'EOF'
-No ejecutes este instalador como root ni mediante:
-
-    wget ... | sudo bash
-
-Ejecutalo como tu usuario normal. El propio script utilizara sudo
-solo para instalar paquetes si es necesario.
-EOF
-    exit 1
-fi
-
-# ---------------------------------------------------------------------------
-# Interactive input
-#
-# /dev/tty is used deliberately so stdin may be a pipe without breaking
-# the interactive menu.
-# ---------------------------------------------------------------------------
-
-read_tty() {
-    local __var="$1"
-    local __prompt="$2"
-    local __value=""
-
-    [[ -r /dev/tty ]] || die "No existe un terminal interactivo (/dev/tty)."
-
-    printf '%s' "$__prompt" > /dev/tty
-    IFS= read -r __value < /dev/tty || true
-
-    printf -v "$__var" '%s' "$__value"
-}
-
-pause() {
-    local dummy=""
-    printf '\n'
-    read_tty dummy "Pulsa Enter para continuar..."
-}
-
-# ---------------------------------------------------------------------------
-# Java
-# ---------------------------------------------------------------------------
-
-java_major_version() {
-    local version=""
-
-    command -v java >/dev/null 2>&1 || {
-        printf '0\n'
-        return
-    }
-
-    version="$(
-        java -version 2>&1 |
-        awk -F '"' '/version/ { print $2; exit }'
-    )"
-
-    if [[ "$version" =~ ^1\.([0-9]+) ]]; then
-        printf '%s\n' "${BASH_REMATCH[1]}"
-    elif [[ "$version" =~ ^([0-9]+) ]]; then
-        printf '%s\n' "${BASH_REMATCH[1]}"
+function get_burp_version() {
+    local version_info
+    version_info=$(curl -fsSL -I "$BURP_URL" | grep -i "content-disposition" | grep -Eo "burpsuite_(pro|desktop)[^;\"[:space:]]*\.jar" | head -n1 | tr -d '\r\n' || true)
+    if [ -n "$version_info" ]; then
+        printf "%s" "$version_info"
     else
-        printf '0\n'
+        printf "%s" "burpsuite_desktop_latest.jar"
     fi
 }
 
-check_dependencies() {
-    local need=()
-    local java_major
-
-    command -v curl >/dev/null 2>&1 || need+=(curl)
-    command -v ca-certificates >/dev/null 2>&1 || true
-
-    java_major="$(java_major_version)"
-
-    if (( java_major < MIN_JAVA )); then
-        need+=(openjdk-21-jre)
-    fi
-
-    if ((${#need[@]} == 0)); then
-        ok "Dependencias disponibles."
-        ok "Java $(java_major_version) detectado."
-        return 0
-    fi
-
-    command -v apt-get >/dev/null 2>&1 ||
-        die "No encuentro apt-get. Instala manualmente curl y Java ${MIN_JAVA}+."
-
-    log "Instalando dependencias: ${need[*]}"
-
-    sudo apt-get update
-
-    sudo apt-get install -y \
-        --no-install-recommends \
-        ca-certificates \
-        "${need[@]}"
-
-    java_major="$(java_major_version)"
-
-    (( java_major >= MIN_JAVA )) ||
-        die "Burp necesita Java ${MIN_JAVA} o superior."
-
-    ok "Java ${java_major} disponible."
-}
-
-# ---------------------------------------------------------------------------
-# Directories
-# ---------------------------------------------------------------------------
-
-create_directories() {
-    install -d -m 0755 "$INSTALL_DIR"
-    install -d -m 0755 "$BIN_DIR"
-    install -d -m 0755 "$DESKTOP_DIR"
-}
-
-# ---------------------------------------------------------------------------
-# Download
-# ---------------------------------------------------------------------------
-
-download_burp() {
-    local tmp
-
-    create_directories
-
-    tmp="$(mktemp "${INSTALL_DIR}/burpsuite.jar.XXXXXX")"
-
-    cleanup_download() {
-        rm -f "$tmp"
-    }
-
-    trap cleanup_download RETURN
-
-    log "Descargando Burp Suite desde PortSwigger..."
-
-    curl \
-        --fail \
-        --location \
-        --show-error \
-        --retry 3 \
-        --retry-delay 2 \
-        --connect-timeout 20 \
-        --output "$tmp" \
-        "$BURP_URL"
-
-    [[ -s "$tmp" ]] ||
-        die "El archivo descargado esta vacio."
-
-    # ZIP/JAR files normally start with PK.
-    if ! head -c 2 "$tmp" | grep -q 'PK'; then
-        warn "El archivo descargado no parece ser un JAR valido."
-        warn "Primeras lineas de la respuesta:"
-        head -n 5 "$tmp" >&2 || true
+function install_panel_launcher() {
+    ICON_PATH="${BASE_DIR}/burp_suite.ico"
+    if [ ! -f "$ICON_PATH" ]; then
+        echo "Error: Icon file $ICON_PATH not found!"
         return 1
     fi
 
-    chmod 0644 "$tmp"
-    mv -f "$tmp" "$BURP_JAR"
+    LAUNCHER_NAME="BurpSuite Professional"
+    LAUNCHER_CMD="burpsuitepro"
+    DESKTOP_FILE="burpsuite-professional.desktop"       
+    APP_DIR="$HOME/.local/share/applications"
+    mkdir -p "$APP_DIR"
 
-    trap - RETURN
-
-    ok "Burp instalado en:"
-    printf '    %s\n' "$BURP_JAR"
-}
-
-# ---------------------------------------------------------------------------
-# Command launcher
-# ---------------------------------------------------------------------------
-
-install_launcher() {
-    create_directories
-
-    cat > "$LAUNCHER" <<EOF
-#!/usr/bin/env bash
-set -e
-
-BURP_JAR="${BURP_JAR}"
-
-if [[ ! -f "\$BURP_JAR" ]]; then
-    echo "Burp Suite no esta instalado: \$BURP_JAR" >&2
-    exit 1
-fi
-
-exec java -jar "\$BURP_JAR" "\$@"
-EOF
-
-    chmod 0755 "$LAUNCHER"
-
-    ok "Comando instalado:"
-    printf '    %s\n' "$LAUNCHER"
-
-    case ":${PATH}:" in
-        *":${BIN_DIR}:"*)
-            ;;
-        *)
-            warn "${BIN_DIR} no esta actualmente en PATH."
-            printf '\nAnade esto a ~/.zshrc si usas zsh:\n\n'
-            printf '    export PATH="$HOME/.local/bin:$PATH"\n\n'
-            ;;
-    esac
-}
-
-# ---------------------------------------------------------------------------
-# Desktop entry
-# ---------------------------------------------------------------------------
-
-install_desktop_launcher() {
-    create_directories
-
-    [[ -x "$LAUNCHER" ]] || install_launcher
-
-    cat > "$DESKTOP_FILE" <<EOF
+    cat > "$APP_DIR/$DESKTOP_FILE" << EOL
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=Burp Suite
+Name=${LAUNCHER_NAME}
 Comment=Web Security Testing Tool
-Exec=${LAUNCHER}
-Icon=applications-development
+Exec=${LAUNCHER_CMD}
+Icon=${ICON_PATH}
 Terminal=false
 Categories=Development;Security;
 StartupNotify=true
-StartupWMClass=burpsuite
-EOF
+StartupWMClass=burpsuite-pro
+EOL
 
-    chmod 0644 "$DESKTOP_FILE"
-
-    if command -v update-desktop-database >/dev/null 2>&1; then
-        update-desktop-database "$DESKTOP_DIR" >/dev/null 2>&1 || true
+    chmod +x "$APP_DIR/$DESKTOP_FILE"
+    if command -v update-desktop-database &>/dev/null; then
+        update-desktop-database "$APP_DIR" 2>/dev/null || true
     fi
-
-    ok "Launcher de escritorio creado:"
-    printf '    %s\n' "$DESKTOP_FILE"
+    echo "Launcher added to panel/menu. You can find 'BurpSuite Professional' in your applications menu."
 }
 
-# ---------------------------------------------------------------------------
-# Install
-# ---------------------------------------------------------------------------
-
-install_burp() {
-    check_dependencies
-
-    if [[ -f "$BURP_JAR" ]]; then
-        local answer=""
-        read_tty answer \
-            "Burp ya esta instalado. Quieres descargarlo de nuevo? [y/N] "
-
-        case "${answer:-n}" in
-            y|Y|yes|YES|s|S|si|SI)
-                download_burp
-                ;;
-            *)
-                log "Manteniendo JAR existente."
-                ;;
-        esac
+function check_dependencies() {
+    echo "Checking dependencies..."
+    local PKG_MGR=""
+    
+    if command -v apt &>/dev/null; then
+        PKG_MGR="sudo apt install -y"
+        sudo apt update
+    elif command -v pacman &>/dev/null; then
+        PKG_MGR="sudo pacman -S --noconfirm"
+    elif command -v dnf &>/dev/null; then
+        PKG_MGR="sudo dnf install -y"
     else
-        download_burp
+        echo "Package manager not automatically supported. Please ensure git, axel, curl, and java are installed."
+        return 0
     fi
 
-    install_launcher
+    for dep in git axel curl; do
+        if ! command -v "$dep" &>/dev/null; then
+            echo "Installing $dep..."
+            $PKG_MGR "$dep" || { echo "Error installing $dep"; exit 1; }
+        fi
+    done
 
-    ok "Instalacion completada."
-
-    printf '\nEjecuta:\n\n'
-    printf '    burpsuitepro\n\n'
-    printf 'En Burp Professional introduce tu licencia oficial cuando se solicite.\n'
-}
-
-# ---------------------------------------------------------------------------
-# Update
-# ---------------------------------------------------------------------------
-
-update_burp() {
-    check_dependencies
-
-    log "Actualizando Burp Suite..."
-    download_burp
-
-    [[ -x "$LAUNCHER" ]] || install_launcher
-
-    ok "Actualizacion completada."
-}
-
-# ---------------------------------------------------------------------------
-# Run
-# ---------------------------------------------------------------------------
-
-run_burp() {
-    [[ -f "$BURP_JAR" ]] ||
-        die "Burp no esta instalado. Usa primero la opcion de instalacion."
-
-    local java_major
-    java_major="$(java_major_version)"
-
-    (( java_major >= MIN_JAVA )) ||
-        die "Burp necesita Java ${MIN_JAVA}+; detectado: ${java_major}"
-
-    log "Iniciando Burp Suite..."
-
-    java -jar "$BURP_JAR"
-}
-
-# ---------------------------------------------------------------------------
-# Remove
-# ---------------------------------------------------------------------------
-
-remove_burp() {
-    local answer=""
-
-    read_tty answer \
-        "Eliminar Burp, launcher y acceso del menu? [y/N] "
-
-    case "${answer:-n}" in
-        y|Y|yes|YES|s|S|si|SI)
-            rm -rf "$INSTALL_DIR"
-            rm -f "$LAUNCHER"
-            rm -f "$DESKTOP_FILE"
-
-            if command -v update-desktop-database >/dev/null 2>&1; then
-                update-desktop-database "$DESKTOP_DIR" \
-                    >/dev/null 2>&1 || true
+    if ! command -v java &>/dev/null; then
+        echo "Installing Java..."
+        if command -v apt &>/dev/null; then
+            local java_installed=false
+            for java_version in openjdk-21-jre openjdk-17-jre openjdk-11-jre default-jre; do
+                if sudo apt install -y "$java_version" 2>/dev/null; then
+                    java_installed=true
+                    break
+                fi
+            done
+            if [ "$java_installed" = false ]; then
+                echo "Error: Could not install Java with apt."
+                exit 1
             fi
+        else
+            $PKG_MGR jre-openjdk || $PKG_MGR java-latest-openjdk
+        fi
+    fi
 
-            ok "Burp eliminado."
-            ;;
-        *)
-            log "Operacion cancelada."
-            ;;
+    if ! command -v java &>/dev/null; then
+        echo "Error: Could not install Java automatically. Please install Java manually (version 11 or higher)."
+        exit 1
+    fi
+}
+
+function detect_desktop_env() {
+    local desktop="${XDG_CURRENT_DESKTOP:-}"
+    if [[ "${desktop^^}" == *"XFCE"* ]]; then echo "xfce"
+    elif [[ "${desktop^^}" == *"GNOME"* ]]; then echo "gnome"
+    elif [[ "${desktop^^}" == *"KDE"* ]]; then echo "kde"
+    else echo "unknown"
+    fi
+}
+
+function sync_repository() {
+    echo "Syncing repository..."
+    cd "$BASE_DIR"
+    
+    if [ -d ".git" ]; then
+        local current_branch upstream
+        current_branch=$(git branch --show-current)
+        if [ -z "$current_branch" ]; then
+            echo "Detached HEAD detected. Skipping repository sync to avoid overwriting local state."
+            return 0
+        fi
+
+        upstream=$(git rev-parse --abbrev-ref --symbolic-full-name "@{u}" 2>/dev/null || true)
+        if [ -z "$upstream" ]; then
+            echo "No upstream configured for $current_branch. Skipping repository sync."
+            return 0
+        fi
+
+        git fetch --prune
+        if ! git diff --quiet || ! git diff --cached --quiet; then
+            echo "Local changes detected. Skipping sync to avoid overwriting your work."
+            return 0
+        fi
+
+        git merge --ff-only "$upstream"
+    else
+        echo "Directory is not a valid Git repository. Skipping Git sync..."
+    fi
+}
+
+function latest_local_jar() {
+    find "$BASE_DIR" -maxdepth 1 -type f \( -name 'burpsuite_pro_*.jar' -o -name 'burpsuite_desktop_*.jar' \) -printf '%f\n' | sort -V | tail -n 1
+}
+
+function download_burp_jar() {
+    local target_jar="$1"
+    local temp_jar="${target_jar}.part"
+
+    rm -f "$temp_jar"
+    if axel -n 10 -o "$temp_jar" "$BURP_URL" || curl -fL -o "$temp_jar" "$BURP_URL"; then
+        if [ ! -s "$temp_jar" ]; then
+            echo "Error: Downloaded file is empty."
+            rm -f "$temp_jar"
+            return 1
+        fi
+        mv "$temp_jar" "$target_jar"
+    else
+        rm -f "$temp_jar"
+        echo "Error: Download failed."
+        return 1
+    fi
+}
+
+function install_burp() {
+    check_dependencies
+    sync_repository
+    
+    cd "$BASE_DIR"
+    
+    # 2. Smart Checker: Look for ANY existing version locally
+    EXISTING_JAR=$(latest_local_jar)
+    
+    if [ -n "$EXISTING_JAR" ]; then
+        echo "Local version detected: $EXISTING_JAR. Skipping download."
+    else
+        echo "No local version found. Fetching latest version info from CDN..."
+        BURP_JAR=$(get_burp_version)
+        echo "Downloading $BURP_JAR..."
+        download_burp_jar "$BURP_JAR"
+    fi
+    
+    if [ ! -f "$LOADER_JAR" ]; then
+        echo "Error: $LOADER_JAR is missing after repository sync!"
+        exit 1
+    fi
+    
+    echo -e "\nInstallation complete.\n"
+    echo "Starting loader.jar for initial setup..."
+    (cd "$BASE_DIR" && java -jar "$LOADER_JAR") &
+    echo "Starting Burp Suite Professional..."
+    run_burp
+
+    read -p "Do you want to install the global command 'burpsuitepro'? [Y/n] " install_cmd
+    install_cmd=${install_cmd:-y}
+    if [[ $install_cmd =~ ^[Yy] ]]; then install_launcher; fi
+
+    desktop_env=$(detect_desktop_env)
+    if [ "$desktop_env" != "unknown" ]; then
+        read -p "Do you want to create a desktop shortcut for $desktop_env? [Y/n] " create_shortcut
+        create_shortcut=${create_shortcut:-y}
+        if [[ $create_shortcut =~ ^[Yy] ]]; then install_panel_launcher; fi
+    fi
+}
+
+function update_burp() {
+    echo "Checking for updates..."
+    cd "$BASE_DIR"
+    
+    # Check what is the latest online vs what we have locally
+    LATEST_JAR=$(get_burp_version)
+    EXISTING_JAR=$(latest_local_jar)
+    
+    if [ "$EXISTING_JAR" == "$LATEST_JAR" ]; then
+        echo "You already have the latest version ($LATEST_JAR). No update required."
+        return 0
+    fi
+    
+    echo "New version available: $LATEST_JAR"
+    sync_repository
+    
+    echo "Downloading fresh Burp Suite Professional ($LATEST_JAR)..."
+    download_burp_jar "$LATEST_JAR"
+    if [ -n "$EXISTING_JAR" ] && [ "$EXISTING_JAR" != "$LATEST_JAR" ]; then
+        echo "Removing old version ($EXISTING_JAR)..."
+        rm -f "$EXISTING_JAR"
+    fi
+    echo "Update complete."
+}
+
+function install_launcher() {
+    LAUNCHER_PATH="/usr/local/bin/burpsuitepro"
+    local temp_launcher
+    temp_launcher=$(mktemp)
+    echo "Installing launcher to $LAUNCHER_PATH..."
+    
+    # 3. Dynamic Launcher: It will auto-detect the latest JAR every time it runs
+    cat > "$temp_launcher" << EOL
+#!/bin/bash
+cd "${BASE_DIR}"
+DYNAMIC_JAR=\$(find "${BASE_DIR}" -maxdepth 1 -type f \( -name 'burpsuite_pro_*.jar' -o -name 'burpsuite_desktop_*.jar' \) -printf '%f\n' | sort -V | tail -n 1)
+if [ -z "\$DYNAMIC_JAR" ]; then
+    echo "Error: Burp Suite JAR not found in ${BASE_DIR}"
+    exit 1
+fi
+java ${JVM_ARGS[*]} -jar "${BASE_DIR}/\$DYNAMIC_JAR" "\$@"
+EOL
+
+    chmod +x "$temp_launcher"
+    sudo mv "$temp_launcher" "$LAUNCHER_PATH" || {
+        rm -f "$temp_launcher"
+        return 1
+    }
+    echo "Launcher installed. You can now run 'burpsuitepro' from anywhere."
+}
+
+function delete_launcher() {
+    LAUNCHER_PATH="/usr/local/bin/burpsuitepro"
+    if [ -f "$LAUNCHER_PATH" ]; then
+        sudo rm "$LAUNCHER_PATH"
+        echo "Launcher removed from $LAUNCHER_PATH."
+    else
+        echo "No launcher found at $LAUNCHER_PATH."
+    fi
+}
+
+function delete_burp() {
+    echo "Deleting Burp Suite files..."
+    cd "$BASE_DIR"
+    rm -f burpsuite_pro_*.jar burpsuite_desktop_*.jar "$LOADER_JAR"
+    delete_launcher
+    echo "Local files and launcher deleted."
+}
+
+function run_loader() {
+    cd "$BASE_DIR"
+    if [ ! -f "$LOADER_JAR" ]; then
+        echo "loader.jar missing. Run install first."
+        exit 1
+    fi
+    echo "Starting $LOADER_JAR..."
+    java -jar "$LOADER_JAR"
+}
+
+function run_burp() {
+    cd "$BASE_DIR"
+    TARGET_JAR=$(latest_local_jar)
+    
+    if [ -z "$TARGET_JAR" ] || [ ! -f "$LOADER_JAR" ]; then
+        echo "Burp Suite or loader.jar missing. Run install first."
+        exit 1
+    fi
+    echo "Executing Burp Suite Professional ($TARGET_JAR)..."
+    java "${JVM_ARGS[@]}" -jar "${TARGET_JAR}"
+}
+
+function pause() {
+    echo -e "\nPress Enter to continue..."
+    read -r
+}
+
+function menu() {
+    clear
+    echo -e "\nBurp Suite Professional Menu"
+    echo "----------------------------------------"
+    echo "1) Install Burp Suite"
+    echo "2) Update Burp Suite"
+    echo "3) Delete Burp Suite & Launcher"
+    echo "4) Run Burp Suite"
+    echo "5) Install Launcher (global command)"
+    echo "6) Delete Launcher"
+    echo "7) Add Panel/Menu Launcher (Desktop)"
+    echo "8) Run Loader"
+    echo "9) Exit"
+    echo "----------------------------------------"
+    read -p "Choose an option [1-9]: " opt
+    case $opt in
+        1) install_burp; pause; menu ;;
+        2) update_burp; pause; menu ;;
+        3) delete_burp; pause; menu ;;
+        4) run_burp; pause; menu ;;
+        5) install_launcher; pause; menu ;;
+        6) delete_launcher; pause; menu ;;
+        7) install_panel_launcher; pause; menu ;;
+        8) run_loader; pause; menu ;;
+        9) exit 0 ;;
+        *) echo "Invalid option"; pause; menu ;;
     esac
 }
 
-# ---------------------------------------------------------------------------
-# Diagnostics
-# ---------------------------------------------------------------------------
-
-diagnostics() {
-    printf '\n'
-    printf 'Usuario:        %s\n' "$USER"
-    printf 'HOME:           %s\n' "$HOME"
-    printf 'Install dir:    %s\n' "$INSTALL_DIR"
-    printf 'JAR:            %s\n' "$BURP_JAR"
-    printf 'Launcher:       %s\n' "$LAUNCHER"
-    printf 'Desktop file:   %s\n' "$DESKTOP_FILE"
-    printf 'Java:           '
-
-    if command -v java >/dev/null 2>&1; then
-        java -version 2>&1 | head -n 1
-    else
-        printf 'no instalado\n'
-    fi
-
-    printf '\n'
-
-    if [[ -f "$BURP_JAR" ]]; then
-        printf 'Burp JAR:       instalado\n'
-        if command -v sha256sum >/dev/null 2>&1; then
-            printf 'SHA256:         '
-            sha256sum "$BURP_JAR" | awk '{print $1}'
-        fi
-    else
-        printf 'Burp JAR:       no instalado\n'
-    fi
-
-    printf '\n'
-}
-
-# ---------------------------------------------------------------------------
-# Menu
-# ---------------------------------------------------------------------------
-
-menu() {
-    local opt=""
-
-    while true; do
-        clear 2>/dev/null || true
-
-        cat <<'EOF'
-
-Burp Suite - Installer
-----------------------------------------
-1) Instalar Burp Suite
-2) Actualizar Burp Suite
-3) Ejecutar Burp Suite
-4) Instalar comando burpsuitepro
-5) Crear launcher de escritorio
-6) Diagnostico
-7) Desinstalar
-8) Salir
-----------------------------------------
-EOF
-
-        read_tty opt "Selecciona una opcion [1-8]: "
-
-        case "$opt" in
-            1)
-                install_burp
-                pause
-                ;;
-            2)
-                update_burp
-                pause
-                ;;
-            3)
-                run_burp
-                pause
-                ;;
-            4)
-                install_launcher
-                pause
-                ;;
-            5)
-                install_desktop_launcher
-                pause
-                ;;
-            6)
-                diagnostics
-                pause
-                ;;
-            7)
-                remove_burp
-                pause
-                ;;
-            8)
-                exit 0
-                ;;
-            *)
-                warn "Opcion invalida."
-                pause
-                ;;
-        esac
-    done
-}
-
+clear
 menu
